--- a/mimic_version_compare.ipynb
+++ b/mimic_version_compare.ipynb
@@ -12,7 +12,8 @@
     "import os\n",
     "import random\n",
     "from datetime import datetime\n",
-    "import math"
+    "import math\n",
+    "from tqdm import tqdm"
    ]
   },
   {
