--- a/test.ipynb
+++ b/test.ipynb
@@ -511,22 +511,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "transfers_df_0dot4 = pd.read_csv(f\"transfers-0.4.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "662573"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TabularData.Clinical.Core.admissions in TabularData._Clinical._Core"
+    "len(transfers_df_0dot4[transfers_df_0dot4[\"eventtype\"] == \"ED\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "448972"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ED_edstays_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ED_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-IV ED\"\n",
+    "ED_edstays_df = pd.read_csv(f\"{ED_FOLDER_PATH}/edstays.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2192963"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(transfers_df_0dot4)"
    ]
   },
   {
@@ -555,7 +615,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "para"
+    "transfer_ed_df = transfers_df_0dot4[transfers_df_0dot4[\"eventtype\"] == \"ED\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_to_older_stay_id={}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_to_older_stay_id.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "for ed_stay_instance in ED_edstays_df.iloc:\n",
+    "    subject_id = ed_stay_instance['subject_id']\n",
+    "    matches_transfered = transfer_ed_df[\n",
+    "        (transfer_ed_df['subject_id'] == subject_id) &\n",
+    "        (transfer_ed_df['intime'] == ed_stay_instance['intime']) &\n",
+    "        (transfer_ed_df['outtime'] == ed_stay_instance['outtime'])\n",
+    "    ]\n",
+    "\n",
+    "    if (len(matches_transfered) > 0) and (not (matches_transfered.iloc[0]['transfer_id'] in new_to_older_stay_id.values())):\n",
+    "        new_to_older_stay_id[ed_stay_instance['stay_id']\n",
+    "                             ] = matches_transfered.iloc[0]['transfer_id']\n"
    ]
   },
   {
