--- a/(1) Clinical data import.ipynb
+++ b/(1) Clinical data import.ipynb
@@ -29,7 +29,9 @@
     "from datetime import datetime\n",
     "import math\n",
     "from tqdm.notebook  import tqdm\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "pd.options.mode.chained_assignment  = None"
    ]
   },
   {
@@ -45,12 +47,12 @@
     "EYEGAZE_FOLDER_PATH = \"E:/AI-VR dataset/eye-gaze-data-for-chest-x-rays-1.0.0\"\n",
     "REFLACX_FOLDER_PATH = \"E:/AI-VR dataset/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0\"\n",
     "# XAMI_MIMIC_PATH = \"E:/AI-VR dataset/XAMI-MIMIC\"\n",
-    "XAMI_MIMIC_PATH = \"./XAMI-MIMIC-2\""
+    "XAMI_MIMIC_PATH = \"./XAMI-MIMIC\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +225,7 @@
        "4                                        NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,33 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e88901d6772545ae9e51e826a7c92d3d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/65379 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# foreach patient, we create a folder for it\n",
-    "for patient_id in tqdm(all_patients_in_cxr):\n",
-    "    os.makedirs(f\"{XAMI_MIMIC_PATH}/patient_{patient_id}\", exist_ok=True)"
+    "# # foreach patient, we create a folder for it\n",
+    "# for patient_id in tqdm(all_patients_in_cxr):\n",
+    "#     os.makedirs(f\"{XAMI_MIMIC_PATH}/patient_{patient_id}\", exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +539,7 @@
        "[377110 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +588,7 @@
        "Name: StudyDateTime, Length: 377110, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -659,13 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdffac5660e94238861c5a04a219ee81",
+       "model_id": "fa149d0efc514091a5048a36d7787471",
        "version_major": 2,
        "version_minor": 0
       },
@@ -715,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -732,12 +719,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Add relationship to EyeGaze and REFLACX. (Checking if the dataset contain this dicom_id)\n",
-    "\n",
     "eye_gaze_master_df = pd.read_csv(f\"{EYEGAZE_FOLDER_PATH}/master_sheet.csv\")\n",
     "reflacx_meta_df =  pd.concat([pd.read_csv(f\"{REFLACX_FOLDER_PATH}/main_data/metadata_phase_{i}.csv\") for i in range(1,4)])\n",
     "all_dicom_id_in_eye_gaze = list(eye_gaze_master_df['dicom_id'])\n",
@@ -748,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,32 +746,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create stay_id folder and import CXR-meta"
+    "## Create stay_id folder and import CXR-data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for stay_id in set(CXR_meta_df_has_stayId['stay_id']):\n",
+    "# cxr_chexpert_df = pd.read_csv(f\"{CXR_FOLDER_PATH}/mimic-cxr-2.0.0-chexpert.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "# cxr_negbio_df = pd.read_csv(f\"{CXR_FOLDER_PATH}/mimic-cxr-2.0.0-negbio.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "# cxr_split_df = pd.read_csv(f\"{CXR_FOLDER_PATH}/mimic-cxr-2.0.0-split.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for subject_id in set(CXR_meta_df_has_stayId['subject_id']):\n",
+    "#     subject_matches = CXR_meta_df_has_stayId[CXR_meta_df_has_stayId['subject_id'] == subject_id]\n",
+    "#     all_stay_ids = list(set(subject_matches['stay_id']))\n",
     "\n",
-    "    # Create the folder for this stay.\n",
-    "    matches = CXR_meta_df_has_stayId[CXR_meta_df_has_stayId['stay_id'] == stay_id] \n",
     "\n",
-    "    if (len(matches ) < 1):\n",
-    "        raise StopIteration(\"Should have matches in the CXR meta table\")\n",
+    "#     for stay_id in all_stay_ids:\n",
+    "#         stay_matches = subject_matches[subject_matches['stay_id'] == stay_id]\n",
+    "#         all_study_ids = list(set(stay_matches['stay_id']))\n",
     "\n",
-    "    # Find who is the patient\n",
-    "    subject_id = matches.iloc[0]['subject_id']\n",
-    "    \n",
-    "    # Create a folder for this stay \n",
-    "    stay_folder_path = f\"{XAMI_MIMIC_PATH}/patient_{subject_id}/stay_{stay_id}\" \n",
-    "    os.makedirs(stay_folder_path, exist_ok=True)\n",
+    "#         for study_id in all_study_ids:\n",
+    "#             match_cxr_meta = CXR_meta_df_has_stayId[CXR_meta_df_has_stayId['study_id'] == study_id]\n",
+    "#             match_cxr_chexpert = cxr_chexpert_df[cxr_chexpert_df[\"study_id\"] == study_id]\n",
+    "#             match_cxr_negbio = cxr_negbio_df[cxr_negbio_df[\"study_id\"] == study_id]\n",
+    "#             match_cxr_split = cxr_split_df[cxr_split_df[\"study_id\"] == study_id]\n",
     "\n",
-    "    # Store the matches in the folder as `cxr_meta.csv`\n",
-    "    matches.to_csv(f\"{stay_folder_path}/cxr_meta.csv\")"
+    "#             save_folder_path = f\"{XAMI_MIMIC_PATH}/patient_{subject_id}/stay_{stay_id}/CXR-JPG/study_{study_id}\"\n",
+    "#             os.makedirs(save_folder_path, exist_ok=True)\n",
+    "\n",
+    "#             match_cxr_meta.to_csv(f\"{stay_folder_path}/cxr_chexpert.csv\")\n",
+    "#             match_cxr_chexpert.to_csv(f\"{stay_folder_path}/cxr_chexpert.csv\")\n",
+    "#             match_cxr_negbio.to_csv(f\"{stay_folder_path}/cxr_negbio.csv\")\n",
+    "#             match_cxr_split.to_csv(f\"{stay_folder_path}/cxr_split.csv\")        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for stay_id in set(CXR_meta_df_has_stayId['stay_id']):\n",
+    "\n",
+    "#     # Create the folder for this stay.\n",
+    "#     stay_matches = CXR_meta_df_has_stayId[CXR_meta_df_has_stayId['stay_id'] == stay_id]\n",
+    "\n",
+    "#     if (len(stay_matches) < 1):\n",
+    "#         raise StopIteration(\"Should have matches in the CXR meta table\")\n",
+    "\n",
+    "#     # Find who is the patient\n",
+    "#     subject_id = stay_matches.iloc[0]['subject_id']\n",
+    "\n",
+    "#     # Create a folder for this stay\n",
+    "#     stay_folder_path = f\"{XAMI_MIMIC_PATH}/patient_{subject_id}/stay_{stay_id}\"\n",
+    "#     os.makedirs(stay_folder_path, exist_ok=True)\n",
+    "\n",
+    "#     all_study_ids = list(set(stay_matches[\"study_id\"]))\n",
+    "\n",
+    "#     for study_id in all_study_ids:\n",
+    "#         match_cxr_meta = CXR_meta_df_has_stayId[CXR_meta_df_has_stayId['study_id'] == study_id]\n",
+    "#         match_cxr_chexpert = cxr_chexpert_df[cxr_chexpert_df[\"study_id\"] == study_id]\n",
+    "#         match_cxr_negbio = cxr_negbio_df[cxr_negbio_df[\"study_id\"] == study_id]\n",
+    "#         match_cxr_split = cxr_split_df[cxr_split_df[\"study_id\"] == study_id]\n",
+    "\n",
+    "#         match_cxr_chexpert.to_csv(f\"{stay_folder_path}/cxr_chexpert.csv\")\n",
+    "#         match_cxr_negbio.to_csv(f\"{stay_folder_path}/cxr_negbio.csv\")\n",
+    "#         match_cxr_split.to_csv(f\"{stay_folder_path}/cxr_split.csv\")\n"
    ]
   },
   {
@@ -797,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,11 +953,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subject_level_import(cxr_df, import_df, save_folder_name, save_table_name, import_df_subject_id = \"subject_id\"):\n",
+    "def subject_level_import(cxr_df, import_df, save_table_name, import_df_subject_id = \"subject_id\"):\n",
     "    all_cxr_subjet_ids = set(cxr_df['subject_id'])\n",
     "\n",
     "    # get the stay_id that are valid in the import df \n",
@@ -948,27 +985,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "Core_admissions_df = pd.read_csv(f\"{CLINICAL_FOLDER_PATH}/core/admissions.csv\")\n",
-    "subject_level_import(CXR_meta_df_has_stayId, Core_admissions_df, \"Core\", \"admissions\")"
+    "subject_level_import(CXR_meta_df, Core_admissions_df, \"admissions\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "Core_patients_df = pd.read_csv(f\"{CLINICAL_FOLDER_PATH}/core/patients.csv\")\n",
-    "subject_level_import(CXR_meta_df_has_stayId, Core_patients_df, \"Core\", \"patients\")"
+    "subject_level_import(CXR_meta_df, Core_patients_df, \"patients\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,33 +1022,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "376221"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# change the stay_id to int\n",
-    "CXR_meta_df['stay_id'] = CXR_meta_df['stay_id'].apply(lambda x: None if np.isnan(x) else str(int(x)))\n",
+    "# CXR_meta_df['stay_id'] = CXR_meta_df['stay_id'].apply(lambda x: None if np.isnan(x) else str(int(x)))\n",
     "CXR_meta_df.to_csv(\"cxr_meta.csv\")\n",
-    "cxr_df_with_stay_id_only = CXR_meta_df[CXR_meta_df['stay_id'].isna()]\n",
+    "cxr_df_with_stay_id_only = CXR_meta_df[CXR_meta_df['stay_id'].notnull()]\n",
     "cxr_df_with_stay_id_only['stay_id'] = cxr_df_with_stay_id_only['stay_id'].apply(lambda x: int(x))\n",
     "cxr_df_with_stay_id_only.to_csv(\"cxr_meta_with_stay_id_only.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1413,7 @@
        "[642 rows x 18 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1800,7 @@
        "[590 rows x 18 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
