--- a/(5) Import _CXR_images.ipynb
+++ b/(5) Import _CXR_images.ipynb
@@ -8,27 +8,26 @@
    "source": [
     "import pandas as pd\n",
     "import time\n",
-    "import numpy as np\n",
     "import os\n",
-    "import random\n",
     "from datetime import datetime   \n",
-    "import math\n",
     "from tqdm.notebook  import tqdm\n",
-    "from shutil import copytree\n",
+    "from shutil import copytree, copy\n",
     "\n",
     "pd.options.mode.chained_assignment  = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the path for all of the folders.\n",
     "ED_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-IV ED\"\n",
     "CLINICAL_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-IV Clinical Database\"\n",
-    "CXR_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0\"\n",
+    "CXR_JPG_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0\"\n",
+    "CXR_DICOM_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-CXR\"\n",
+    "\n",
     "EYEGAZE_FOLDER_PATH = \"E:/AI-VR dataset/eye-gaze-data-for-chest-x-rays-1.0.0\"\n",
     "REFLACX_FOLDER_PATH = \"E:/AI-VR dataset/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0\"\n",
     "# XAMI_MIMIC_PATH = \"E:/AI-VR dataset/XAMI-MIMIC\"\n",
@@ -477,8 +476,17 @@
     "            match_cxr_negbio.to_csv(f\"{destination_path}/cxr_negbio.csv\")\n",
     "            match_cxr_split.to_csv(f\"{destination_path}/cxr_split.csv\") \n",
     "\n",
+    "            ### import the dicom\n",
+    "            # source_path = f\"{CXR_DICOM_FOLDER_PATH}/files/p{str(subject_id)[:2]}/p{subject_id}/s{study_id}\"\n",
+    "            # save_folder_path = f\"{XAMI_MIMIC_PATH}/patient_{subject_id}/stay_{stay_id}/CXR-DICOM\"\n",
+    "            # os.makedirs(save_folder_path, exist_ok=True)\n",
+    "            # destination_path = f\"{save_folder_path}/study_{study_id}\"\n",
+    "            # copytree(source_path, destination_path)\n",
     "\n",
-    "            ### Dicom\n"
+    "            # ## import report text\n",
+    "            # source_path = f\"{CXR_DICOM_FOLDER_PATH}/files/p{str(subject_id)[:2]}/p{subject_id}/s{study_id}.txt\"\n",
+    "            # destination_path = f\"{save_folder_path}\"\n",
+    "            # copy(source_path, destination_path)\n"
    ]
   }
  ],
