--- a/(3) REFLACX_MIMIC_import.ipynb
+++ b/(3) REFLACX_MIMIC_import.ipynb
@@ -25,13 +25,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "disk_location  = \"/Volumes/New Volume/AI-VR dataset\"\n",
+    "# disk_location = \"E:/AI-VR dataset\"\n",
+    "\n",
     "# Define the path for all of the folders.\n",
-    "ED_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-IV ED\"\n",
-    "CLINICAL_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-IV Clinical Database\"\n",
-    "CXR_FOLDER_PATH = \"E:/AI-VR dataset/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0\"\n",
-    "EYEGAZE_FOLDER_PATH = \"E:/AI-VR dataset/eye-gaze-data-for-chest-x-rays-1.0.0\"\n",
-    "REFLACX_FOLDER_PATH = \"E:/AI-VR dataset/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0\"\n",
-    "# XAMI_MIMIC_PATH = \"E:/AI-VR dataset/XAMI-MIMIC\"\n",
+    "ED_FOLDER_PATH = f\"{disk_location}/MIMIC-IV ED\"\n",
+    "CLINICAL_FOLDER_PATH = f\"{disk_location}/MIMIC-IV Clinical Database\"\n",
+    "CXR_FOLDER_PATH = f\"{disk_location}/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0\"\n",
+    "EYEGAZE_FOLDER_PATH = f\"{disk_location}/eye-gaze-data-for-chest-x-rays-1.0.0\"\n",
+    "REFLACX_FOLDER_PATH = f\"{disk_location}/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0/reflacx-reports-and-eye-tracking-data-for-localization-of-abnormalities-in-chest-x-rays-1.0.0\"\n",
+    "# XAMI_MIMIC_PATH = \"{disk_location}/XAMI-MIMIC\"\n",
     "XAMI_MIMIC_PATH = \"./XAMI-MIMIC\""
    ]
   },
