introduce patient level.

--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -25,7 +25,7 @@
     "import os\n",
     "import math\n",
     "from tqdm.notebook import tqdm\n",
-    "from utils.importer import import_to_stay_folder, import_to_patient_folder\n",
+    "from utils.importer import import_to_patient_sub_folder\n",
     "from data_path import CXR_FOLDER_PATH, REFLACX_FOLDER_PATH, EYEGAZE_FOLDER_PATH, ED_FOLDER_PATH, CLINICAL_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH\n",
     "\n",
     "pd.options.mode.chained_assignment = None\n"
@@ -1089,7 +1089,9 @@
     "# Store .csv with identified stay_id\n",
     "os.makedirs(XAMI_SPREADSHEET_FOLDER_PATH, exist_ok=True)\n",
     "CXR_meta_df.to_csv(os.path.join(XAMI_SPREADSHEET_FOLDER_PATH ,\"cxr_meta.csv\"))\n",
+    "\n",
     "cxr_df_with_stay_id_only = CXR_meta_df[CXR_meta_df['stay_id'].notnull()]\n",
+    "\n",
     "cxr_df_with_stay_id_only['stay_id'] = cxr_df_with_stay_id_only['stay_id'].apply(lambda x: int(x))\n",
     "cxr_df_with_stay_id_only.to_csv(os.path.join(XAMI_SPREADSHEET_FOLDER_PATH ,\"cxr_meta_with_stay_id_only.csv\"))\n",
     "print(f\"Total {len(cxr_cannot_find_stay)} CXR-images can't find their stay_id, {len(cxr_df_with_stay_id_only)} instances found stay_id.\")"
@@ -1534,7 +1536,7 @@
    "outputs": [],
    "source": [
     "######################################\n",
-    "# Tables can be linked with stay_id\n",
+    "# Tables can be linked with both patient_id and stay_id\n",
     "######################################\n",
     "# core - tranfers \n",
     "# ed - diagnosis\n",
@@ -1642,14 +1644,24 @@
     }
    ],
    "source": [
-    "### Stay level import \n",
+    "# Import ED\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, ED_diagnosis_df, \"ED\", \"diagnosis\")\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, ED_edstays_df, \"ED\", \"edstays\")\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, ED_medrecon_df, \"ED\", \"medrecon\")\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, ED_pyxis_df, \"ED\", \"pyxis\")\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, ED_triage_df, \"ED\", \"triage\")\n",
     "\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, ED_diagnosis_df, \"ED\", \"diagnosis\")\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, ED_edstays_df, \"ED\", \"edstays\")\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, ED_medrecon_df, \"ED\", \"medrecon\")\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, ED_pyxis_df, \"ED\", \"pyxis\")\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, ED_triage_df, \"ED\", \"triage\")\n",
-    "import_to_stay_folder(cxr_df_with_stay_id_only, Core_transfers_df, \"Core\", \"transfers\", \"transfer_id\")"
+    "# Import Core\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, Core_transfers_df, \"Core\", \"transfers\", \"transfer_id\")\n",
+    "import_to_patient_sub_folder(\n",
+    "    CXR_meta_df, Core_admissions_df, \"Core\", \"admissions\")\n",
+    "import_to_patient_sub_folder(CXR_meta_df, Core_patients_df, \"Core\", \"patients\")\n"
    ]
   },
   {
@@ -1686,11 +1698,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "## Subject level import \n",
-    "import_to_patient_folder(CXR_meta_df, Core_admissions_df, \"admissions\")\n",
-    "import_to_patient_folder(CXR_meta_df, Core_patients_df, \"patients\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
