--- a/(4) Import _CXR_images.ipynb
+++ b/(4) Import _CXR_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "import pandas as pd\n",
     "from tqdm.notebook  import tqdm\n",
     "from shutil import copytree, copy\n",
-    "from data_path import CXR_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH\n",
+    "from data_path import CXR_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH, CXR_DICOM_FOLDER_PATH\n",
     "\n",
     "pd.options.mode.chained_assignment  = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "567         True       False   2.147033e+13  37362927  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cfab29d163d4f92ac8545e5dca94b34",
+       "model_id": "ecfe938dd0f747a6af4d1dd3b5d7c45b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,18 +289,18 @@
     "                destination_path, \"cxr_split.csv\"))\n",
     "\n",
     "            # import the dicom\n",
-    "            # source_path = os.path.join(\n",
-    "            #     CXR_DICOM_FOLDER_PATH, \"files\",  f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
-    "            # save_folder_path = os.path.join(\n",
-    "            #     XAMI_MIMIC_PATH, f\"patient_{subject_id}\", f\"stay_{stay_id}\", \"CXR-DICOM\")\n",
-    "            # os.makedirs(save_folder_path, exist_ok=True)\n",
-    "            # destination_path = os.join(save_folder_path, f\"study_{study_id}\")\n",
-    "            # copytree(source_path, destination_path, , copy_function=copy, dirs_exist_ok=True)\n",
+    "            source_path = os.path.join(\n",
+    "                CXR_DICOM_FOLDER_PATH, \"files\",  f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
+    "            save_folder_path = os.path.join(\n",
+    "                XAMI_MIMIC_PATH, f\"patient_{subject_id}\", f\"stay_{stay_id}\", \"CXR-DICOM\")\n",
+    "            os.makedirs(save_folder_path, exist_ok=True)\n",
+    "            destination_path = os.path.join(save_folder_path, f\"study_{study_id}\")\n",
+    "            copytree(source_path, destination_path, copy_function=copy, dirs_exist_ok=True)\n",
     "\n",
     "            # ## import report text\n",
-    "            # source_path = os.path.join(CXR_DICOM_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}.txt\"\n",
-    "            # destination_path = save_folder_path\n",
-    "            # copy(source_path, destination_path)\n"
+    "            source_path = os.path.join(CXR_DICOM_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}.txt\")\n",
+    "            destination_path = save_folder_path\n",
+    "            copy(source_path, destination_path)\n"
    ]
   },
   {
